# opentelemetry-rust

opentelemetry-appender-tracing/: Cargo.toml
opentelemetry-appender-tracing/src/: layer.rs
